fix: Hero overflow

--- a/src/components/Governance/Intro/styles.module.css
+++ b/src/components/Governance/Intro/styles.module.css
@@ -33,7 +33,7 @@
   }
 
   .imageContainer {
-    overflow: visible;
+    height: 500px;
   }
 
   .imageWrapper {
@@ -49,7 +49,7 @@
   .imageWrapper {
     width: 240%;
     left: -70%;
-    top: -25%;
+    top: -10%;
   }
 }
 
